--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="overlay-three"></div>
         <div class="OverlayBlack">
             <!--* NAVIGATION BAR -->
-            <nav id="nav">
-                <div class="container">
+            <nav id="nav" class="nav">
+                <div class="container" id="navContainer">
                     <div class="nav-logo">
-                        <img src="./images/logo.png" height="35" alt="">
+                        <img src="./images/logo.png" height="35" alt="logo" class="logo">
                     </div>
                     <div class="nav-items">
                         <ul>
@@ -45,7 +45,6 @@
             <!--* HEADER CONTENT -->
             <section id="header">
                 <div class="header-content">
-
                     <h4>Welcome</h4>
                     <h1>I'M </h1>
                     <p>It is a long established fact that a reader will be of a page when established fact looking at
@@ -396,6 +395,9 @@
             </footer>
         </div>
     </div>
+
+    <script src="app.js"></script>
+
 </body>
 
 </html>
